BUG#14056 Column prefix index on UTF-8 primary key column causes 'Can't find record..' Applying InnoDB patch from Jan Lindstrom